Add UF semianr doc

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.DS_Store
+20191015_florida/20191015_florida_presentation_files/figure-html/cars-1.svg
+.DS_Store
